# Athos

./: .directory  .gitignore  2311kde6  BUILDS  CURRENT-VERSIONS.env  DIFFS.txt  NEW-VERSIONS.env  NOTINALP.txt  OLD_PKGS.list  README.md  TODO  find-broken.py  fix-broken.py  make_coffe  setup.sh  upgrade-plasma5-clean.list  upgrade-plasma5.list  upgrade-plasma5.sh
AthOS/REPO-AthOS/gpu-screen-recorder/work/: README.md  TODO  meson.build  meson_options.txt  project.conf
AthOS/REPO-AthOS/gpu-screen-recorder/work/extra/: gpu-screen-recorder.env  gpu-screen-recorder.service
AthOS/REPO-AthOS/gpu-screen-recorder/work/include/: color_conversion.h  damage.h  defs.h  egl.h  pipewire_audio.h  pipewire_video.h  sound.hpp  utils.h  vec2.h
AthOS/REPO-AthOS/gpu-screen-recorder/work/include/capture/: capture.h  kms.h  nvfbc.h  portal.h  xcomposite.h
AthOS/REPO-AthOS/gpu-screen-recorder/work/include/codec_query/: codec_query.h  nvenc.h  vaapi.h  vulkan.h
AthOS/REPO-AthOS/gpu-screen-recorder/work/include/window/: window.h  window_wayland.h  window_x11.h
AthOS/REPO-AthOS/gpu-screen-recorder/work/kms/client/: kms_client.c
AthOS/REPO-AthOS/gpu-screen-recorder/work/kms/server/: kms_server.c
AthOS/REPO-AthOS/gpu-screen-recorder/work/scripts/: record-application-name.sh  record-save-application-name.sh  replay-application-name.sh
AthOS/REPO-AthOS/gpu-screen-recorder/work/src/: color_conversion.c  cursor.c  damage.c  dbus.c  egl.c  main.cpp  pipewire_audio.c  pipewire_video.c  sound.cpp  utils.c
AthOS/REPO-AthOS/gpu-screen-recorder/work/src/capture/: capture.c  kms.c  nvfbc.c  portal.c  xcomposite.c
AthOS/REPO-AthOS/gpu-screen-recorder/work/src/codec_query/: nvenc.c  vaapi.c  vulkan.c
AthOS/REPO-AthOS/gpu-screen-recorder/work/src/window/: window.c  window_wayland.c  window_x11.c
REPO-AthOS/digikam/work/digikam-8.4.0/: AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Doxyfile  Mainpage.dox  Messages.sh  PACKAGING  README.BUNDLES  README.md  bootstrap.homebrew  bootstrap.linux  bootstrap.local  bootstrap.macports  bootstrap.tarball  bootstrap.vcpkg
REPO-AthOS/digikam/work/digikam-8.4.0/po/ar/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/be/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/bg/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/bs/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/ca/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/ca@valencia/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/cs/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/da/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/de/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/el/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/en_GB/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/eo/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/es/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/et/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/eu/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/fa/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/fi/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/fr/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/ga/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/gl/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/he/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/hi/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/hne/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/hr/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/hu/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/id/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/is/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/it/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/ja/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/ka/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/km/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/ko/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/lt/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/lv/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/mai/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/mr/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/ms/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/nb/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/nds/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/ne/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/nl/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/nn/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/oc/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/pa/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/pl/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/pt/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/pt_BR/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/ro/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/ru/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/se/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/sk/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/sl/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/sq/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/sv/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/th/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/tr/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/ug/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/uk/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/vi/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/zh_CN/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/po/zh_TW/: digikam.po
REPO-AthOS/digikam/work/digikam-8.4.0/project/: NEWS.1.5.0  NEWS.4.9.0  NEWS.6.3.0  NEWS.7.1.0  NEWS.7.10.0  NEWS.7.2.0  NEWS.7.4.0  NEWS.7.5.0  NEWS.7.6.0  NEWS.7.7.0  NEWS.7.8.0  NEWS.7.9.0  NEWS.8.0.0  NEWS.8.2.0
REPO-AthOS/digikam/work/digikam-8.4.0/project/documents/: D&D-Behavior-For-Tags.txt  KEYSHORTCUTS
REPO-AthOS/digikam/work/digikam-8.4.0/project/reports/: clazy.sh  (+10 more)
(+2887 files in other folders)
